Criamos uma tela de login com HTML  e CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-c
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tela de Logint</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+    <center>
+<form action="">
+    <h1>Tela de Login</h1>
+    <input type="email" name="" id="" placeholder="Informe o seu email ou senão vamos te bater">
+    <input type="password" placeholder="Informe  a sua palavra-passe ou senão vamos te bater">
+    <button type="submit">Enviar</button>
+</form>
+</center>
+
+
+
+</body>
+</html>
