--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <center>
-<form action="">
+<form action="#">
     <h1>Tela de Login</h1>
     <input type="email" name="" id="" placeholder="Informe o seu email ou senão vamos te bater">
     <input type="password" placeholder="Informe  a sua palavra-passe ou senão vamos te bater">
