--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-c
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, enim quasi. Doloremque[
+        ] ratione placeat dolore ex, obcaecati, numquam saepe sunt dignissimos beatae qui explicabo ha
+        rum enim quo quisquam itaque eos?</h1>
+</body>
+</html>
