alterei index adicionando uma lista dos membros

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
     <input type="password" placeholder="Informe  a sua palavra-passe ou senão vamos te bater">
     <button type="submit">Enviar</button>
 </form>
-</center>
 
-
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, enim quasi. Doloremque[
-        ] ratione placeat dolore ex, obcaecati, numquam saepe sunt dignissimos beatae qui explicabo ha
-        rum enim quo quisquam itaque eos?
+  <p>
+    Angela esta a modificar o conteúdo do arquivo.
   </p>
+
+  <h2>Membros do team</h2>
+  <ul>
+    <li>Ângela</li>
+    <li>Adriel</li>
+    <li>Francisco</li>
+  </ul>
+
 
 </body>
 </html>
